# chronobreak

./: .codecov.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml
chronobreak/: Cargo.toml
chronobreak/src/: clock.rs  error.rs  lib.rs  macros.rs  shared_clock.rs
chronobreak/src/mock/: futures_timer.rs  mod.rs  parking_lot.rs
chronobreak/src/mock/crossbeam/: mod.rs
chronobreak/src/mock/futures/: executor.rs  mod.rs
chronobreak/src/mock/futures/executor/: mod.rs  thread_pool.rs
chronobreak/src/mock/futures_timer/: mod.rs
chronobreak/src/mock/parking_lot/: mod.rs
chronobreak/src/mock/std/: mod.rs  sync.rs  thread.rs  time.rs
chronobreak_derive/: Cargo.toml  README.md
chronobreak_derive/src/: apply_fn.rs  chronobreak_attr.rs  lib.rs  test_attr.rs
chronobreak_derive/tests/ui/: mod.rs
chronobreak_derive/tests/ui/fails/: unsupported_item_type.rs
chronobreak_derive/tests/ui/fails/apply/: multiple_closure_args.stderr  too_few_args.rs
chronobreak_derive/tests/ui/fails/chronobreak/: unsupported_item_type.stderr
chronobreak_derive/tests/ui/fails/constants/: non_tuple_arg.rs  wrong_tuple_arity.stderr
chronobreak_test/: Cargo.toml
chronobreak_test/src/tests/futures_timer/: mod.rs
chronobreak_test/src/tests/std/: mod.rs  thread.rs  time.rs
core/codegen/: Cargo.toml
core/codegen/src/: apply_fn.rs  chronobreak_attr.rs  constants_fn.rs  test_attr.rs
core/codegen/tests/ui/: mod.rs
core/codegen/tests/ui/fails/apply/: multiple_closure_args.rs  non_closure_argument.rs  non_closure_argument.stderr  too_few_args.stderr  too_many_args.rs  too_many_args.stderr
core/codegen/tests/ui/fails/constants/: non_tuple_arg.stderr  wrong_tuple_arity.rs
core/globals/: Cargo.toml
core/globals/src/: lib.rs  local_clock.rs
core/lib/: Cargo.toml
core/lib/src/: clock.rs  error.rs  lib.rs  mock.rs
core/lib/src/mock/: futures_timer.rs
core/lib/src/mock/futures/: executor.rs
core/lib/src/mock/std/: thread.rs  time.rs
example/: Cargo.toml
example/src/: lib.rs
mocks/futures/: Cargo.toml
mocks/futures/src/: executor.rs
mocks/futures_timer/: Cargo.toml
mocks/futures_timer/src/: lib.rs
mocks/parking_lot/: Cargo.toml
mocks/parking_lot/src/: lib.rs
mocks/std/: Cargo.toml
mocks/std/src/: lib.rs  thread.rs  time.rs
mocks/tests/: Cargo.toml
mocks/tests/src/: lib.rs  util.rs
mocks/tests/src/tests/: clock.rs  futures_timer.rs  mod.rs
mocks/tests/src/tests/futures/executor/: thread_pool.rs
mocks/tests/src/tests/parking_lot/: condvar.rs  mod.rs  mutex.rs
mocks/tests/src/tests/std/: thread.rs
mocks/tests/src/tests/std/time/: instant.rs  system_time.rs
tests/mocks/: Cargo.toml
tests/mocks/src/: lib.rs
tests/mocks/src/tests/: clock.rs  futures_timer.rs  mod.rs
tests/mocks/src/tests/futures/executor/: thread_pool.rs
tests/mocks/src/tests/parking_lot/: condvar.rs  mod.rs  mutex.rs
tests/mocks/src/tests/std/: mod.rs  thread.rs  time.rs
tests/mocks/src/tests/std/time/: instant.rs  mod.rs  system_time.rs
