[package]
name = "chronobreak"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Rust mocks for deterministic time testing"
repository = "https://github.com/alexanderlinne/chronobreak"
edition = "2018"

[dependencies]
async-std = "1.6"
crossbeam = { version = "0.7", optional = true }
futures = "0.3"
futures-timer = { version = "3.0", optional = true }
parking_lot = { version = "0.11", optional = true }
chronobreak_derive = { path = "../chronobreak_derive" }

[features]
default = ["crossbeam", "futures-timer", "parking_lot"]
