[package]
name = "chronobreak"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Rust mocks for deterministic time testing"
repository = "https://github.com/alexanderlinne/chronobreak"
edition = "2018"

[dependencies]
async-std = "1.6"
chronobreak_derive = { path = "../chronobreak_derive" }

# supported crates
crossbeam = { version = "0.7", optional = true }
futures = { version = "0.3", features = ["thread-pool"], optional = true }
futures-timer = { version = "3.0", optional = true }
parking_lot = { version = "0.11", optional = true }

[features]
default = ["crossbeam", "futures", "futures-timer", "parking_lot"]
