[package]
name = "chronobreak"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Rust mocks for deterministic time testing"
repository = "https://github.com/alexanderlinne/chronobreak"
homepage = "https://github.com/alexanderlinne/chronobreak"
documentation = "https://docs.rs/chronobreak/0.1.0"
categories = ["date-and-time", "development-tools::testing"]
keywords = ["mock", "test", "time", "instant"]
readme = "../README.md"

[dependencies]
async-std = { version = "1.6", features = ["unstable"] }
chronobreak_derive = { path = "../chronobreak_derive", version = "0.1.0" }

# supported crates
futures = { version = "0.3", features = ["thread-pool"], optional = true }
futures-timer = { version = "3.0", optional = true }
parking_lot = { version = "0.11", optional = true }

[features]
default = ["futures", "futures-timer", "parking_lot"]
extended-apis = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
