[package]
name = "chronobreak_derive"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for the chronobreak crate"
repository = "https://github.com/alexanderlinne/chronobreak"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
