[package]
name = "chronobreak_derive"
version = "0.0.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for the chronobreak crate"
repository = "https://github.com/alexanderlinne/chronobreak"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.12"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
async-std = "1.6"
chronobreak = { path = "../chronobreak" }
trybuild = "1.0"

[[test]]
name = "ui"
path = "tests/ui/mod.rs"
harness = false
