[package]
name = "chronobreak_derive"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for the chronobreak crate"
repository = "https://github.com/alexanderlinne/chronobreak"
homepage = "https://github.com/alexanderlinne/chronobreak"
documentation = "https://docs.rs/chronobreak_derive/0.1.0"
categories = ["date-and-time", "development-tools::testing"]
keywords = ["mock", "test", "time", "instant"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
async-std = "1.6"
chronobreak = { path = "../lib" }
trybuild = "1.0"

[[test]]
name = "ui"
path = "tests/ui/mod.rs"
harness = false
