[package]
name = "chronobreak"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Rust mocks for deterministic time testing"
repository = "https://github.com/alexanderlinne/chronobreak"
homepage = "https://github.com/alexanderlinne/chronobreak"
documentation = "https://docs.rs/chronobreak/0.1.0"
categories = ["date-and-time", "development-tools::testing"]
keywords = ["mock", "test", "time", "instant"]
readme = "../README.md"

[dependencies]
chronobreak_derive = { path = "../codegen", version = "0.1.0" }
chronobreak_globals = { path = "../globals", version = "*" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
