[package]
name = "mock_tests"
version = "0.1.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
edition = "2018"

[dependencies]
chronobreak = { path = "../../core/lib" }
chronobreak_futures = { path = "../../mocks/futures" }
chronobreak_futures_timer = { path = "../../mocks/futures_timer" }
chronobreak_parking_lot = { path = "../../mocks/parking_lot" }
chronobreak_std = { path = "../../mocks/std", features = ["extended-apis"] }
futures = { version = "0.3", features = ["thread-pool"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
