[package]
name = "mock_tests"
version = "0.1.0"
authors = ["Alexander Linne <alexander.linne@outlook.com>"]
edition = "2018"

[dependencies]
chronobreak = { path = "../../chronobreak" }
futures = { version = "0.3", features = ["thread-pool"] }
paste = "1.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
